--- a/CGFexample.vcxproj
+++ b/CGFexample.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DemoScene.cpp" />
+    <ClCompile Include="src\Peca.cpp" />
     <ClCompile Include="src\Rectangle.cpp" />
     <ClCompile Include="src\Tabuleiro.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -20,12 +21,13 @@
     <ClCompile Include="src\TPinterface.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Object.h" />
+    <ClInclude Include="include\ObjectCompost.h" />
+    <ClInclude Include="include\Peca.h" />
     <ClInclude Include="include\Rectangle.h" />
     <ClInclude Include="include\Tabuleiro.h" />
     <ClInclude Include="include\TPinterface.h" />
     <ClInclude Include="src\DemoScene.h" />
-    <ClInclude Include="src\Object.h" />
-    <ClInclude Include="src\ObjectCompost.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{3A4F1E3F-8862-4892-A1EA-E3EE90BE15AB}</ProjectGuid>
@@ -68,7 +70,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp.lib;glew32.lib;CGFlib.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;assimp.lib;glew32.lib;CGFlib.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
