--- a/CGFexample.vcxproj
+++ b/CGFexample.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\DemoScene.cpp" />
     <ClCompile Include="src\Peca.cpp" />
     <ClCompile Include="src\Rectangle.cpp" />
@@ -21,6 +22,7 @@
     <ClCompile Include="src\TPinterface.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\Object.h" />
     <ClInclude Include="include\ObjectCompost.h" />
     <ClInclude Include="include\Peca.h" />
