--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ bin/LAIG.pdb
 bin/LAIG.exe
 bin/LAIG.ilk
 bin/LAIG.pdb
+bin/LAIG.exe
+bin/LAIG.ilk
+bin/LAIG.pdb
+CGFexample.suo
+ipch/cgfexample-cef1cbd7/laig-c19ab99.ipch
