digital clock added

--- a/CGFexample.vcxproj
+++ b/CGFexample.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\Clock.cpp" />
     <ClCompile Include="src\DemoScene.cpp" />
     <ClCompile Include="src\Peca.cpp" />
     <ClCompile Include="src\Rectangle.cpp" />
@@ -23,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Camera.h" />
+    <ClInclude Include="include\Clock.h" />
     <ClInclude Include="include\Object.h" />
     <ClInclude Include="include\ObjectCompost.h" />
     <ClInclude Include="include\Peca.h" />
