--- a/CGFexample.vcxproj
+++ b/CGFexample.vcxproj
@@ -11,9 +11,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Animation.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Clock.cpp" />
     <ClCompile Include="src\DemoScene.cpp" />
+    <ClCompile Include="src\LinearAnimation.cpp" />
     <ClCompile Include="src\Peca.cpp" />
     <ClCompile Include="src\Rectangle.cpp" />
     <ClCompile Include="src\Tabuleiro.cpp" />
@@ -23,8 +25,10 @@
     <ClCompile Include="src\TPinterface.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Animation.h" />
     <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\Clock.h" />
+    <ClInclude Include="include\LinearAnimation.h" />
     <ClInclude Include="include\Object.h" />
     <ClInclude Include="include\ObjectCompost.h" />
     <ClInclude Include="include\Peca.h" />
